--- a/resty-app/src/component/form/main.scss
+++ b/resty-app/src/component/form/main.scss
@@ -42,10 +42,10 @@ main{
         box-shadow: 5px 5px 15px 5px #000000;
       
       }
-      p{
+      .results{
         padding: 20px;
         font: 100% $font-stack bold;
-        font-size: 12px ;
+        font-size: 20px ;
         font-weight: bold;
       }
 }
